--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dash-bootstrap-components = "^1.0.3"
 pandas = "^1.4.1"
 plotly = "^5.6.0"
 dash-bootstrap-templates = "^1.0.5"
+openpyxl = "^3.0.9"
 
 [tool.poetry.dev-dependencies]
 
